# rust-todo

./: Cargo.toml  Makefile  docker-compose.yml
migrations/: 20241116121203_init.sql
src/: handlers.rs  main.rs  repositories.rs  repository.rs
todo-api/: .env  Cargo.toml  Makefile  docker-compose.yml
todo-api/migrations/: 20241121114401_label.sql
todo-api/src/: handlers.rs  main.rs  repositories.rs
todo-api/src/handlers/: label.rs  todo.rs
todo-api/src/repositories/: label.rs  todo.rs
todo-front/: package-lock.json  package.json  tsconfig.node.json
todo-front/src/: App.tsx
todo-front/src/components/: SideNav.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
todo-front/src/lib/: toggleLabels.ts
todo-front/src/lib/api/: label.ts  todo.ts
todo-front/src/styles/: modal.ts
todo-front/src/types/: todo.d.ts
